[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "channel-bench"
path = "src/channel-bench.rs"

[[bin]]
name = "udp-bandwidth-test-server"
path = "src/udp-bandwidth-test-server.rs"

[[bin]]
name = "udp-bandwidth-test-client"
path = "src/udp-bandwidth-test-client.rs"



[dependencies]
common = { path = "../common" }
tokio = { version = "1.23", features = ["full"] }
