[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
rand = "0.8.5"
crossterm = "0.25.0"
