[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
sha2 = "0.10.6"
async-recursion = "1.0.0"
hasher = { path = "../hasher" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
